Add logo SVG and minimal CGEventTap diagnostic script
- Introduced a new SVG logo featuring a gradient background and stylized "V" letterform representing transformation, along with accent elements symbolizing AI.
- Added a Python script (`test_tap.py`) for diagnosing CGEventTap functionality, which listens for keyboard events and prints relevant information to the console.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "AI-powered text rewriting through macOS contextual menu"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "cairosvg>=2.8.2",
     "openai>=2.16.0",
     "pyinstaller>=6.18.0",
     "pyobjc-core>=12.1",
