--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ __pycache__/
 *.pyc
 .env
 .DS_Store
+
+# Auto Claude data directory
+.auto-claude/
+
+# Auto Claude generated files
+.auto-claude-security.json
+.auto-claude-status
+.claude_settings.json
+.worktrees/
+.security-key
+logs/security/
